@@ -14,6 +14,7 @@ import java.math.BigDecimal;
 import java.math.RoundingMode;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Primary
 @Repository
@@ -22,16 +23,27 @@ public class JpaHistoryDAO implements HistoryDAO {
     @PersistenceContext
     private EntityManager entityManager;
 
-    Optional<History> findHistoryByUserIdAndFilmId(long userId, long filmId) {
-        List<History> histories = entityManager
-                .createQuery("SELECT h FROM History h WHERE h.user.id = :user_id AND  h.film.id = :film_id", History.class)
-                .setParameter("user_id", userId)
-                .setParameter("film_id", filmId)
-                .getResultList();
-        History history = histories.get(0);
-        return Optional.ofNullable(history);
+    Optional<History> findHistoryByUserIdAndFilmId(long userId, long filmId) throws ServiceException {
+        System.err.println("findHistoryByUserIdAndFilmId");
+        try {
+            List<History> histories = entityManager
+                    .createQuery("SELECT h FROM History h WHERE h.user.id = :user_id AND  h.film.id = :film_id", History.class)
+                    .setParameter("user_id", userId)
+                    .setParameter("film_id", filmId)
+                    .getResultList();
+            History history = histories.get(0);
+            return Optional.ofNullable(history);
+        } catch (Exception e) {
+            throw new ServiceException("Can't find Film in watched list of User");
+        }
     }
 
+    /**
+     * Returns the list of watched films associated to a user
+     *
+     * @param userId the id of the User
+     * @return the corresponding Films list (of watched films)
+     */
     @Override
     public List<Film> getWatchList(long userId) throws ServiceException {
         try {
@@ -44,6 +56,14 @@ public class JpaHistoryDAO implements HistoryDAO {
         }
     }
 
+    /**
+     * Add a film to the watched list of a User.
+     * Returns the History related to the pair (Film, User).
+     *
+     * @param userId the id of the User
+     * @param filmId the id og the Film to add
+     * @return the corresponding History (pair Film-User)
+     */
     @Override
     public History addFilmToWatchList(long userId, long filmId) throws ServiceException {
         List<Film> watched_films = getWatchList(userId);
@@ -63,6 +83,12 @@ public class JpaHistoryDAO implements HistoryDAO {
         }
     }
 
+    /**
+     * Deletes a Film from the watched list of a User
+     *
+     * @param userId the id of the User
+     * @param filmId the id of the Film to delete
+     */
     @Override
     public void deleteFilm(long userId, long filmId) throws ServiceException {
         Optional<History> history = findHistoryByUserIdAndFilmId(userId, filmId);
@@ -75,6 +101,15 @@ public class JpaHistoryDAO implements HistoryDAO {
         }
     }
 
+    /**
+     * Adds a rating to a Film from a User.
+     * The film must be in the watched list of the User to be rated.
+     *
+     * @param userId the id of the User
+     * @param filmId the id of the Film to be rated
+     * @param rating the (new) rating to give to the Film
+     * @return the corresponding History (pair Film-User)
+     */
     @Override
     public History rateFilm(long userId, long filmId, int rating) throws ServiceException {
         if (rating < 0) {
@@ -95,9 +130,19 @@ public class JpaHistoryDAO implements HistoryDAO {
         }
     }
 
+    /**
+     * Get the rating of a Film from a User.
+     * The film must be in the watched list of the User to have a rating.
+     * Rating could not be existing so the function return an Optional
+     *
+     * @param userId the id of the User
+     * @param filmId the id of the Film
+     * @return the corresponding rating or nothing
+     */
     @Override
     public int getUserRating(long userId, long filmId) throws ServiceException {
         Optional<History> history = findHistoryByUserIdAndFilmId(userId, filmId);
+        System.err.println(history);
         if (history.isPresent()) {
             return history.get().getRating();
         }
@@ -113,7 +158,7 @@ public class JpaHistoryDAO implements HistoryDAO {
                     .stream()
                     .filter(rating -> rating > 0)
                     .map(Double::valueOf)
-                    .toList();
+                    .collect(Collectors.toList());
             return getMeanRating(ratings);
         } catch (Exception e) {
             throw new ServiceException("Internal Server Error");
